Adding cli